<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/select_mode_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="50sp"
        android:text=" SELECT MODE"
        android:textAlignment="center"
        android:textSize="38dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_quiz_mode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.17"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/quiz_mode"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_flashcard_mode"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:layout_marginTop="10sp"
        android:layout_weight="0.07"
        android:background="@color/colorAccent"
        android:text="@string/flashcard_mode"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_review_mode"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_weight="0.04"
        android:background="@color/colorAccent"
        android:text="@string/review_mode"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


</LinearLayout>

